--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "core-js": "^2.6.11",
+    "intl": "^1.2.5",
     "karma-phantomjs-launcher": "^1.0.4",
     "phantomjs-prebuilt": "^2.1.16",
+    "query-string": "^5.1.1",
     "rxjs": "~6.5.5",
     "save-dev": "0.0.1-security",
     "tslib": "^2.0.0",
